--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <link rel="Sylesheet" href="style.css" type="text/css" />
 
 <TITLE>TAJNA STRONA INTERNATU</TITLE>
-<body bgcolor="green" </body>
+<body bgcolor="gray" </body>a
+   <font color="white">
 <BODY>
 <center><H1 style="font-size: 25px; text-align; center; background-color: red;">to jest tajna strona nie o mnie *ANONYMOUS*</H1><BR></center>
 <STRONG>Mój nick: TheTren</STRONG>
